# cpplox

./: CMakeLists.txt  README.md  literal.cc  literal.h  lox.cc  lox.h  main.cc  run.sh  scanner.cc  scanner.h  token.cc  token.h
test/: scanner_test.cc
